--- a/LoadPayRegsApp/templates/base.html
+++ b/LoadPayRegsApp/templates/base.html
@@ -9,7 +9,7 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-        <title>Страница загрузки файла</title>
+        {% block title %}{% endblock %}
     </head>
     <body>
         
@@ -33,17 +33,16 @@
 		-->
 		
 		<div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-10 col-md-12">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            {% block content %}
-                            {% endblock %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+		    <div class="row justify-content-center">
+			    <div class="col-lg-10 col-md-12">
+				    <div class="card mb-4">
+					    <div class="card-body">
+		                    {% block content %}{% endblock %}
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
         <!-- Дополнительный JavaScript; выберите один из двух! -->
 
