--- a/LoadPayRegsApp/templates/upload_file.html
+++ b/LoadPayRegsApp/templates/upload_file.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %}<title>Страница загрузки файла</title>{% endblock %}
+{% block head %}
+    {% block title %}
+	    <title>Страница загрузки файла</title>
+	{% endblock %}
+	<head>
+        <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
+    </head>
+{% endblock %}
 
 {% block content %}
     <h2>Загрузка файла</h2>
