--- a/LoadPayRegsApp/templates/base.html
+++ b/LoadPayRegsApp/templates/base.html
@@ -34,17 +34,10 @@
         </form>
 		-->
 		
-		<div class="container">
-		    <div class="row justify-content-center">
-			    <div class="col-lg-10 col-md-12">
-				    <div class="card mb-4">
-					    <div class="card-body">
+		                <div class="container-fluid">    
 		                    {% block content %}{% endblock %}
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+					    </div>
+					
 
         <!-- Дополнительный JavaScript; выберите один из двух! -->
 
