--- a/LoadPayRegsApp/templates/table.html
+++ b/LoadPayRegsApp/templates/table.html
@@ -49,6 +49,23 @@
 							<td>{{ row.note }}</td>
                         </tr>
 					{% endfor %}
+					<tr>
+					    <th>Итого:</th>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td align="right">{{ result_1|floatformat:2 }}</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td align="right">{{ result_2|floatformat:2 }}</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
                 </tbody>
             </table>
 		{% endblock %}
