--- a/LoadPayRegsApp/templates/test_page.html
+++ b/LoadPayRegsApp/templates/test_page.html
@@ -2,7 +2,7 @@
 
 
         {% block title %}
-		    <title>Таблица реестра по двлд. Лайково</title>
+		    <title>Тестовая страница</title>
 		{% endblock %}
 		
 		
